crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__block_expression.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: policy
---
{
  "version": "V2",
  "ffi_imports": [],
  "facts": [],
  "actions": [
    {
      "persistence": "Persistent",
      "identifier": {
        "name": "foo",
        "span": {
          "start": 12,
          "end": 15
        }
      },
      "arguments": [],
      "statements": [
        {
          "kind": {
            "Let": {
              "identifier": {
                "name": "x",
                "span": {
                  "start": 32,
                  "end": 33
                }
              },
              "expression": {
                "kind": {
                  "Block": [
                    [
                      {
                        "kind": {
                          "Let": {
                            "identifier": {
                              "name": "a",
                              "span": {
                                "start": 54,
                                "end": 55
                              }
                            },
                            "expression": {
                              "kind": {
                                "Int": 3
                              },
                              "span": {
                                "start": 58,
                                "end": 59
                              }
                            }
                          }
                        },
                        "span": {
                          "start": 50,
                          "end": 72
                        }
                      },
                      {
                        "kind": {
                          "Let": {
                            "identifier": {
                              "name": "b",
                              "span": {
                                "start": 76,
                                "end": 77
                              }
                            },
                            "expression": {
                              "kind": {
                                "Int": 4
                              },
                              "span": {
                                "start": 80,
                                "end": 81
                              }
                            }
                          }
                        },
                        "span": {
                          "start": 72,
                          "end": 94
                        }
                      }
                    ],
                    {
                      "kind": {
                        "Unwrap": {
                          "kind": {
                            "InternalFunction": {
                              "SaturatingAdd": [
                                {
                                  "kind": {
                                    "Identifier": {
                                      "name": "a",
                                      "span": {
                                        "start": 118,
                                        "end": 119
                                      }
                                    }
                                  },
                                  "span": {
                                    "start": 118,
                                    "end": 119
                                  }
                                },
                                {
                                  "kind": {
                                    "Identifier": {
                                      "name": "b",
                                      "span": {
                                        "start": 121,
                                        "end": 122
                                      }
                                    }
                                  },
                                  "span": {
                                    "start": 121,
                                    "end": 122
                                  }
                                }
                              ]
                            }
                          },
                          "span": {
                            "start": 103,
                            "end": 123
                          }
                        }
                      },
                      "span": {
                        "start": 96,
                        "end": 123
                      }
                    }
                  ]
                },
                "span": {
                  "start": 36,
                  "end": 133
                }
              }
            }
          },
          "span": {
            "start": 28,
            "end": 138
          }
        }
      ],
      "span": {
        "start": 5,
        "end": 139
      }
    }
  ],
  "effects": [],
  "structs": [],
  "enums": [],
  "commands": [],
  "functions": [],
  "finish_functions": [],
  "global_lets": [],
  "text": "\n    action foo() {\n        let x = {\n            let a = 3\n            let b = 4\n            : unwrap saturating_add(a, b)\n        }\n    }\n    "
}
