crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__map_statement.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [
        FactDefinition {
            immutable: false,
            identifier: "Foo" @ 14..17,
            key: [
                FieldDefinition {
                    identifier: "i" @ 18..19,
                    field_type: Int @ 20..23,
                },
            ],
            value: [
                FieldDefinition {
                    identifier: "n" @ 27..28,
                    field_type: Int @ 29..32,
                },
            ],
            span: 9..33,
        },
    ],
    actions: [
        ActionDefinition {
            persistence: Persistent,
            identifier: "foo" @ 49..52,
            arguments: [],
            statements: [
                Map(
                    MapStatement {
                        fact: FactLiteral {
                            identifier: "Foo" @ 73..76,
                            key_fields: [
                                (
                                    "i" @ 77..78,
                                    Expression(
                                        Int(
                                            1,
                                        ) @ 79..80,
                                    ),
                                ),
                            ],
                            value_fields: None,
                        },
                        identifier: "f" @ 85..86,
                        statements: [],
                    },
                ) @ 69..102,
            ],
            span: 42..112,
        },
    ],
    effects: [],
    structs: [],
    enums: [],
    commands: [],
    functions: [],
    finish_functions: [],
    global_lets: [],
    text: "\n        fact Foo[i int]=>{n int}\n        action foo() {\n            map Foo[i:1] as f {\n            }\n        }\n    ",
}
