crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__parse_global_let_statements.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: policy
---
{
  "version": "V2",
  "ffi_imports": [],
  "facts": [],
  "actions": [
    {
      "persistence": "Persistent",
      "identifier": {
        "name": "foo",
        "span": {
          "start": 57,
          "end": 60
        }
      },
      "arguments": [],
      "statements": [
        {
          "kind": {
            "Let": {
              "identifier": {
                "name": "a",
                "span": {
                  "start": 81,
                  "end": 82
                }
              },
              "expression": {
                "kind": {
                  "Unwrap": {
                    "kind": {
                      "InternalFunction": {
                        "Add": [
                          {
                            "kind": {
                              "Identifier": {
                                "name": "x",
                                "span": {
                                  "start": 96,
                                  "end": 97
                                }
                              }
                            },
                            "span": {
                              "start": 96,
                              "end": 97
                            }
                          },
                          {
                            "kind": {
                              "Int": 1
                            },
                            "span": {
                              "start": 99,
                              "end": 100
                            }
                          }
                        ]
                      }
                    },
                    "span": {
                      "start": 92,
                      "end": 101
                    }
                  }
                },
                "span": {
                  "start": 85,
                  "end": 101
                }
              }
            }
          },
          "span": {
            "start": 77,
            "end": 114
          }
        },
        {
          "kind": {
            "Let": {
              "identifier": {
                "name": "c",
                "span": {
                  "start": 118,
                  "end": 119
                }
              },
              "expression": {
                "kind": {
                  "Not": {
                    "kind": {
                      "Identifier": {
                        "name": "z",
                        "span": {
                          "start": 123,
                          "end": 124
                        }
                      }
                    },
                    "span": {
                      "start": 123,
                      "end": 124
                    }
                  }
                },
                "span": {
                  "start": 122,
                  "end": 124
                }
              }
            }
          },
          "span": {
            "start": 114,
            "end": 137
          }
        },
        {
          "kind": {
            "Emit": {
              "kind": {
                "NamedStruct": {
                  "identifier": {
                    "name": "Bar",
                    "span": {
                      "start": 142,
                      "end": 145
                    }
                  },
                  "fields": [
                    [
                      {
                        "name": "a",
                        "span": {
                          "start": 164,
                          "end": 165
                        }
                      },
                      {
                        "kind": {
                          "Identifier": {
                            "name": "a",
                            "span": {
                              "start": 167,
                              "end": 168
                            }
                          }
                        },
                        "span": {
                          "start": 167,
                          "end": 168
                        }
                      }
                    ],
                    [
                      {
                        "name": "c",
                        "span": {
                          "start": 186,
                          "end": 187
                        }
                      },
                      {
                        "kind": {
                          "Identifier": {
                            "name": "c",
                            "span": {
                              "start": 189,
                              "end": 190
                            }
                          }
                        },
                        "span": {
                          "start": 189,
                          "end": 190
                        }
                      }
                    ]
                  ],
                  "sources": []
                }
              },
              "span": {
                "start": 142,
                "end": 205
              }
            }
          },
          "span": {
            "start": 137,
            "end": 214
          }
        }
      ],
      "span": {
        "start": 50,
        "end": 215
      }
    }
  ],
  "effects": [],
  "structs": [],
  "enums": [],
  "commands": [],
  "functions": [],
  "finish_functions": [],
  "global_lets": [
    {
      "identifier": {
        "name": "x",
        "span": {
          "start": 13,
          "end": 14
        }
      },
      "expression": {
        "kind": {
          "Int": 42
        },
        "span": {
          "start": 17,
          "end": 19
        }
      },
      "span": {
        "start": 9,
        "end": 28
      }
    },
    {
      "identifier": {
        "name": "z",
        "span": {
          "start": 32,
          "end": 33
        }
      },
      "expression": {
        "kind": {
          "Bool": true
        },
        "span": {
          "start": 36,
          "end": 40
        }
      },
      "span": {
        "start": 28,
        "end": 50
      }
    }
  ],
  "text": "\n        let x = 42\n        let z = true\n\n        action foo() {\n            let a = unwrap add(x, 1)\n            let c = !z\n            emit Bar {\n                a: a,\n                c: c,\n            }\n        }\n    "
}
