crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__parse_match_expression.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: policy
---
{
  "version": "V2",
  "ffi_imports": [],
  "facts": [],
  "actions": [
    {
      "persistence": "Persistent",
      "identifier": {
        "name": "foo",
        "span": {
          "start": 16,
          "end": 19
        }
      },
      "arguments": [
        {
          "identifier": {
            "name": "n",
            "span": {
              "start": 20,
              "end": 21
            }
          },
          "field_type": {
            "kind": "Int",
            "span": {
              "start": 22,
              "end": 25
            }
          }
        }
      ],
      "statements": [
        {
          "kind": {
            "Let": {
              "identifier": {
                "name": "x",
                "span": {
                  "start": 45,
                  "end": 46
                }
              },
              "expression": {
                "kind": {
                  "Match": {
                    "scrutinee": {
                      "kind": {
                        "Identifier": {
                          "name": "n",
                          "span": {
                            "start": 55,
                            "end": 56
                          }
                        }
                      },
                      "span": {
                        "start": 55,
                        "end": 56
                      }
                    },
                    "arms": [
                      {
                        "pattern": {
                          "Values": [
                            {
                              "kind": {
                                "Int": 0
                              },
                              "span": {
                                "start": 75,
                                "end": 76
                              }
                            }
                          ]
                        },
                        "expression": {
                          "kind": {
                            "Block": [
                              [
                                {
                                  "kind": {
                                    "Let": {
                                      "identifier": {
                                        "name": "x",
                                        "span": {
                                          "start": 106,
                                          "end": 107
                                        }
                                      },
                                      "expression": {
                                        "kind": {
                                          "Bool": true
                                        },
                                        "span": {
                                          "start": 110,
                                          "end": 114
                                        }
                                      }
                                    }
                                  },
                                  "span": {
                                    "start": 102,
                                    "end": 135
                                  }
                                }
                              ],
                              {
                                "kind": {
                                  "Identifier": {
                                    "name": "x",
                                    "span": {
                                      "start": 137,
                                      "end": 138
                                    }
                                  }
                                },
                                "span": {
                                  "start": 137,
                                  "end": 138
                                }
                              }
                            ]
                          },
                          "span": {
                            "start": 80,
                            "end": 156
                          }
                        },
                        "span": {
                          "start": 75,
                          "end": 173
                        }
                      },
                      {
                        "pattern": {
                          "Default": {
                            "start": 173,
                            "end": 174
                          }
                        },
                        "expression": {
                          "kind": {
                            "Bool": false
                          },
                          "span": {
                            "start": 178,
                            "end": 183
                          }
                        },
                        "span": {
                          "start": 173,
                          "end": 196
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 49,
                  "end": 197
                }
              }
            }
          },
          "span": {
            "start": 41,
            "end": 206
          }
        }
      ],
      "span": {
        "start": 9,
        "end": 207
      }
    }
  ],
  "effects": [],
  "structs": [],
  "enums": [],
  "commands": [],
  "functions": [],
  "finish_functions": [],
  "action_functions": [],
  "global_lets": [],
  "text": "\n        action foo(n int) {\n            let x = match n {\n                0 => {\n                    let x = true\n                    : x\n                }\n                _ => false\n            }\n        }\n    "
}
