crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__parse_seal_open.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [],
    actions: [],
    effects: [],
    structs: [],
    enums: [],
    commands: [
        CommandDefinition {
            persistence: Persistent,
            attributes: [],
            identifier: Ident {
                name: "Foo",
                span: 8..11,
            },
            fields: [],
            seal: [
                Statement {
                    kind: Return(
                        ReturnStatement {
                            expression: Expression {
                                kind: FunctionCall(
                                    FunctionCall {
                                        identifier: Ident {
                                            name: "bar",
                                            span: 56..59,
                                        },
                                        arguments: [
                                            Expression {
                                                kind: Identifier(
                                                    Ident {
                                                        name: "this",
                                                        span: 60..64,
                                                    },
                                                ),
                                                span: 60..64,
                                            },
                                        ],
                                    },
                                ),
                                span: 56..65,
                            },
                        },
                    ),
                    span: 49..78,
                },
            ],
            open: [
                Statement {
                    kind: Return(
                        ReturnStatement {
                            expression: Expression {
                                kind: FunctionCall(
                                    FunctionCall {
                                        identifier: Ident {
                                            name: "baz",
                                            span: 123..126,
                                        },
                                        arguments: [
                                            Expression {
                                                kind: Identifier(
                                                    Ident {
                                                        name: "envelope",
                                                        span: 127..135,
                                                    },
                                                ),
                                                span: 127..135,
                                            },
                                        ],
                                    },
                                ),
                                span: 123..136,
                            },
                        },
                    ),
                    span: 116..149,
                },
            ],
            policy: [],
            recall: [],
            span: 0..160,
        },
    ],
    functions: [],
    finish_functions: [],
    global_lets: [],
    text: "command Foo {\n            seal {\n                return bar(this)\n            }\n\n            open {\n                return baz(envelope)\n            }\n        }",
}
