crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__parse_serialize_deserialize.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [],
    actions: [],
    effects: [],
    structs: [],
    enums: [],
    commands: [
        CommandDefinition {
            persistence: Persistent,
            attributes: [],
            identifier: "Foo" @ 8..11,
            fields: [],
            seal: [
                Expr(
                    Return(
                        InternalFunction(
                            Serialize(
                                Identifier(
                                    "this" @ 66..70,
                                ) @ 66..70,
                            ),
                        ) @ 56..71,
                    ) @ 49..84,
                ) @ 49..84,
            ],
            open: [
                Expr(
                    Return(
                        InternalFunction(
                            Deserialize(
                                Identifier(
                                    "envelope" @ 141..149,
                                ) @ 141..149,
                            ),
                        ) @ 129..150,
                    ) @ 122..163,
                ) @ 122..163,
            ],
            policy: [],
            recall: [],
            span: 0..174,
        },
    ],
    functions: [],
    finish_functions: [],
    global_lets: [],
    text: "command Foo {\n            seal {\n                return serialize(this)\n            }\n\n            open {\n                return deserialize(envelope)\n            }\n        }",
}
