crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__parse_struct.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: policy
---
Policy {
    version: V2,
    ffi_imports: [],
    facts: [],
    actions: [],
    effects: [],
    structs: [
        StructDefinition {
            identifier: "Foo" @ 7..10,
            items: [
                Field(
                    FieldDefinition {
                        identifier: "x" @ 25..26,
                        field_type: Int @ 27..30,
                    },
                ),
            ],
            span: 0..40,
        },
    ],
    enums: [],
    commands: [],
    functions: [
        FunctionDefinition {
            identifier: "convert" @ 59..66,
            arguments: [
                FieldDefinition {
                    identifier: "foo" @ 67..70,
                    field_type: Struct(
                        "Foo" @ 78..81,
                    ) @ 71..81,
                },
            ],
            return_type: Struct(
                "Bar" @ 90..93,
            ) @ 83..93,
            statements: [
                Expr(
                    Return(
                        NamedStruct(
                            NamedStruct {
                                identifier: "Bar" @ 115..118,
                                fields: [
                                    (
                                        "y" @ 121..122,
                                        Dot(
                                            Identifier(
                                                "foo" @ 124..127,
                                            ) @ 124..127,
                                            "x" @ 128..129,
                                        ) @ 124..129,
                                    ),
                                ],
                                sources: [
                                    "baz" @ 134..137,
                                    "thud" @ 142..146,
                                ],
                            },
                        ) @ 115..148,
                    ) @ 108..157,
                ) @ 108..157,
            ],
            span: 50..158,
        },
    ],
    finish_functions: [],
    global_lets: [],
    text: "struct Foo {\n            x int\n        }\n\n        function convert(foo struct Foo) struct Bar {\n            return Bar { y: foo.x, ...baz, ...thud }\n        }",
}
