crates/aranya-policy-lang/src/lang/parse/snapshots/aranya_policy_lang__lang__parse__tests__result_pattern_match.snap
---
source: crates/aranya-policy-lang/src/lang/parse/tests.rs
expression: policy
---
{
  "version": "V2",
  "ffi_imports": [],
  "facts": [],
  "actions": [],
  "effects": [],
  "structs": [],
  "enums": [],
  "commands": [],
  "functions": [
    {
      "identifier": {
        "name": "foo",
        "span": {
          "start": 18,
          "end": 21
        }
      },
      "arguments": [
        {
          "identifier": {
            "name": "r",
            "span": {
              "start": 22,
              "end": 23
            }
          },
          "field_type": {
            "kind": {
              "Result": {
                "ok": {
                  "kind": "Int",
                  "span": {
                    "start": 31,
                    "end": 34
                  }
                },
                "err": {
                  "kind": "String",
                  "span": {
                    "start": 36,
                    "end": 42
                  }
                }
              }
            },
            "span": {
              "start": 24,
              "end": 43
            }
          }
        }
      ],
      "return_type": {
        "kind": "Int",
        "span": {
          "start": 45,
          "end": 48
        }
      },
      "statements": [
        {
          "kind": {
            "Let": {
              "identifier": {
                "name": "x",
                "span": {
                  "start": 67,
                  "end": 68
                }
              },
              "expression": {
                "kind": {
                  "Match": {
                    "scrutinee": {
                      "kind": {
                        "Identifier": {
                          "name": "r",
                          "span": {
                            "start": 77,
                            "end": 78
                          }
                        }
                      },
                      "span": {
                        "start": 77,
                        "end": 78
                      }
                    },
                    "arms": [
                      {
                        "pattern": {
                          "ResultPattern": {
                            "Ok": {
                              "name": "val",
                              "span": {
                                "start": 100,
                                "end": 103
                              }
                            }
                          }
                        },
                        "expression": {
                          "kind": {
                            "Identifier": {
                              "name": "val",
                              "span": {
                                "start": 108,
                                "end": 111
                              }
                            }
                          },
                          "span": {
                            "start": 108,
                            "end": 111
                          }
                        },
                        "span": {
                          "start": 97,
                          "end": 128
                        }
                      },
                      {
                        "pattern": {
                          "ResultPattern": {
                            "Err": {
                              "name": "err",
                              "span": {
                                "start": 132,
                                "end": 135
                              }
                            }
                          }
                        },
                        "expression": {
                          "kind": {
                            "Int": -1
                          },
                          "span": {
                            "start": 140,
                            "end": 142
                          }
                        },
                        "span": {
                          "start": 128,
                          "end": 155
                        }
                      }
                    ]
                  }
                },
                "span": {
                  "start": 71,
                  "end": 156
                }
              }
            }
          },
          "span": {
            "start": 63,
            "end": 169
          }
        },
        {
          "kind": {
            "Expr": {
              "kind": {
                "Return": {
                  "kind": {
                    "Identifier": {
                      "name": "x",
                      "span": {
                        "start": 176,
                        "end": 177
                      }
                    }
                  },
                  "span": {
                    "start": 176,
                    "end": 177
                  }
                }
              },
              "span": {
                "start": 169,
                "end": 186
              }
            }
          },
          "span": {
            "start": 169,
            "end": 186
          }
        }
      ],
      "span": {
        "start": 9,
        "end": 187
      }
    }
  ],
  "finish_functions": [],
  "global_lets": [],
  "text": "\n        function foo(r result[int, string]) int {\n            let x = match r {\n                Ok(val) => val\n                Err(err) => -1\n            }\n            return x\n        }\n    "
}
